bk_ida/gccida/c2/fold_rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3807:4: error: expected ';' after expression
rtx v31; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3807:5: error: use of undeclared identifier 'v31'
rtx v31; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3808:4: error: expected ';' after expression
rtx const_rtx; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3808:5: error: use of undeclared identifier 'const_rtx'
rtx const_rtx; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3818:4: error: expected ';' after expression
rtx v42; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3818:5: error: use of undeclared identifier 'v42'
rtx v42; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3826:4: error: expected ';' after expression
rtx v50; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3826:5: error: use of undeclared identifier 'v50'
rtx v50; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3845:4: error: expected ';' after expression
rtx v69; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3845:5: error: use of undeclared identifier 'v69'
rtx v69; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3846:6: error: use of undeclared identifier 'v70'
rtx *v70; // rbp 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3849:4: error: expected ';' after expression
rtx v73; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3849:5: error: use of undeclared identifier 'v73'
rtx v73; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3876:4: error: expected ';' after expression
rtx v100; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3876:5: error: use of undeclared identifier 'v100'; did you mean 'v10'?
rtx v100; // rax 
    ^~~~
    v10
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3786:6: note: 'v10' declared here
rtx *v10; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3883:4: error: expected ';' after expression
rtx v107; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3883:5: error: use of undeclared identifier 'v107'
rtx v107; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3885:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v109; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/cse.c:3886:4: error: expected ';' after expression
rtx v110; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fold_rtx/src/obj/cse.o] Error 1
